Ветки нужно создавать правильно