@@ -2,6 +2,7 @@ package ru.practicum.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
@@ -9,15 +10,13 @@ import ru.practicum.ewm.grpc.stats.event.InteractionsCountRequestProto;
 import ru.practicum.ewm.grpc.stats.event.RecommendedEventProto;
 import ru.practicum.ewm.grpc.stats.event.SimilarEventsRequestProto;
 import ru.practicum.ewm.grpc.stats.event.UserPredictionsRequestProto;
+import ru.practicum.model.ActionType;
 import ru.practicum.model.EventSimilarity;
 import ru.practicum.model.UserAction;
 import ru.practicum.repository.EventSimilarityRepository;
 import ru.practicum.repository.UserActionRepository;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -28,121 +27,183 @@ public class RecommendationServiceImpl implements RecommendationService {
     private final UserActionRepository userActionRepository;
     private final EventSimilarityRepository eventSimilarityRepository;
 
-    @Override
+    @Value("${application.action-weight.view}")
+    private double view;
+    @Value("${application.action-weight.register}")
+    private double register;
+    @Value("${application.action-weight.like}")
+    private double like;
+
     public List<RecommendedEventProto> getRecommendationsForUser(UserPredictionsRequestProto request) {
         Long userId = request.getUserId();
-        int maxResults = request.getMaxResults();
+        int limit = request.getMaxResults();
+        PageRequest pageRequest = PageRequest.of(0, limit,
+                Sort.by(Sort.Direction.DESC, "timestamp"));
 
-        List<UserAction> userActions = userActionRepository.findAllByUserId(userId,
-                PageRequest.of(0, maxResults, Sort.by(Sort.Direction.DESC, "timestamp")));
-
-        if (userActions.isEmpty()) {
-            return List.of();
-        }
-
-        Set<Long> eventIds = userActions.stream()
+        Set<Long> recentlyViewedEventIds = userActionRepository.findAllByUserId(userId, pageRequest).stream()
                 .map(UserAction::getEventId)
                 .collect(Collectors.toSet());
 
-        List<EventSimilarity> similarEvents = eventSimilarityRepository.findAllByEventAInOrEventBIn(
-                eventIds, eventIds,
-                PageRequest.of(0, maxResults * 2, Sort.by(Sort.Direction.DESC, "score")
-                ));
+        if (recentlyViewedEventIds.isEmpty()) {
+            return Collections.emptyList();
+        }
 
-        Set<Long> allUserEventIds = userActionRepository.findAllEventIdsByUserId(userId);
+        Set<Long> candidateEventIds = findCandidateRecommendations(userId, recentlyViewedEventIds, limit);
 
-        return processSimilarEvents(similarEvents, eventIds, allUserEventIds, userId, maxResults);
-
+        return generateRecommendations(candidateEventIds, userId, limit);
     }
 
-    @Override
     public List<RecommendedEventProto> getSimilarEvents(SimilarEventsRequestProto request) {
         Long eventId = request.getEventId();
         Long userId = request.getUserId();
-        int maxResults = request.getMaxResults();
+        PageRequest pageRequest = PageRequest.of(0, request.getMaxResults(),
+                Sort.by(Sort.Direction.DESC, "score"));
 
-        List<EventSimilarity> eventSimilarities = eventSimilarityRepository.findAllByEventAOrEventB(
-                eventId, eventId,
-                PageRequest.of(0, maxResults * 2, Sort.by(Sort.Direction.DESC, "score")));
+        List<EventSimilarity> similaritiesA = eventSimilarityRepository.findAllByEventA(eventId, pageRequest);
+        List<EventSimilarity> similaritiesB = eventSimilarityRepository.findAllByEventB(eventId, pageRequest);
 
-        if (eventSimilarities.isEmpty()) {
-            return List.of();
-        }
+        List<RecommendedEventProto> recommendations = new ArrayList<>();
 
-        Set<Long> userViewedEvents = userActionRepository.findAllEventIdsByUserId(userId);
-        Set<Long> sourceEventIds = Set.of(eventId);
+        addFilteredRecommendations(recommendations, similaritiesA,true, userId);
+        addFilteredRecommendations(recommendations, similaritiesB,false, userId);
 
-        return processSimilarEvents(eventSimilarities, sourceEventIds, userViewedEvents, userId, maxResults);
+        recommendations.sort(Comparator.comparing(RecommendedEventProto::getScore).reversed());
+
+        return recommendations.size() > request.getMaxResults()
+                ? recommendations.subList(0, request.getMaxResults())
+                : recommendations;
     }
 
-    @Override
     public List<RecommendedEventProto> getInteractionsCount(InteractionsCountRequestProto request) {
-        return request.getEventIdList().stream()
-                .map(eId -> {
-                    Float score = userActionRepository.getSumWeightByEventId(eId);
-                    return RecommendedEventProto.newBuilder()
-                            .setEventId(eId)
-                            .setScore(score != null ? score : 0f)
-                            .build();
-                })
-                .sorted(Comparator.comparing(RecommendedEventProto::getScore).reversed())
-                .collect(Collectors.toList());
-    }
+        Set<Long> eventIds = new HashSet<>(request.getEventIdList());
 
-    private List<RecommendedEventProto> processSimilarEvents(List<EventSimilarity> similarEvents,
-                                                             Set<Long> eventIds,
-                                                             Set<Long> allUserEventIds,
-                                                             Long userId,
-                                                             int maxResults) {
-        Set<Long> newEventIds = similarEvents.stream()
-                .map(es -> eventIds.contains(es.getEventA()) ? es.getEventB() : es.getEventA())
-                .filter(eventId -> !allUserEventIds.contains(eventId))
-                .limit(maxResults * 2L)
-                .collect(Collectors.toSet());
+        Map<Long, Double> eventScores = new HashMap<>();
 
-        return newEventIds.stream()
-                .map(eventId -> RecommendedEventProto.newBuilder()
-                        .setEventId(eventId)
-                        .setScore(calculateScore(eventId, userId, allUserEventIds, maxResults))
+        userActionRepository.findAllByEventIdIn(eventIds).forEach(action -> {
+            long eventId = action.getEventId();
+            double weight = toWeight(action.getActionType());
+            eventScores.merge(eventId, weight, Double::sum);
+        });
+
+        return eventScores.entrySet().stream()
+                .map(entry -> RecommendedEventProto.newBuilder()
+                        .setEventId(entry.getKey())
+                        .setScore(entry.getValue())
                         .build())
-                .sorted(Comparator.comparing(RecommendedEventProto::getScore).reversed())
-                .limit(maxResults)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
-    private float calculateScore(Long eventId, Long userId, Set<Long> allUserEventIds, int maxResults) {
-        List<EventSimilarity> similarEvents = eventSimilarityRepository.findAllByEventAOrEventB(
-                eventId, eventId,
-                PageRequest.of(0, maxResults * 2, Sort.by(Sort.Direction.DESC, "score")
-                ));
+    private Set<Long> findCandidateRecommendations(Long userId, Set<Long> viewedEventIds, int limit) {
+        PageRequest pageRequest = PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "score"));
 
+        List<EventSimilarity> similaritiesA = eventSimilarityRepository.findAllByEventAIn(viewedEventIds, pageRequest);
+        List<EventSimilarity> similaritiesB = eventSimilarityRepository.findAllByEventBIn(viewedEventIds, pageRequest);
 
-        Map<Long, Double> scores = similarEvents.stream()
-                .filter(es -> {
-                    Long other = es.getEventA().equals(eventId) ? es.getEventB() : es.getEventA();
-                    return allUserEventIds.contains(other);
-                })
-                .collect(Collectors.toMap(
-                        es -> es.getEventA().equals(eventId) ? es.getEventB() : es.getEventA(),
-                        EventSimilarity::getScore));
+        Set<Long> recommendations = new HashSet<>();
 
-        if (scores.isEmpty()) {
-            return 0f;
+        addNewEventsFromSimilarities(similaritiesA, true, userId, recommendations);
+        addNewEventsFromSimilarities(similaritiesB, false, userId, recommendations);
+
+        return recommendations;
+    }
+
+    private void addNewEventsFromSimilarities(List<EventSimilarity> similarities,
+                                              boolean isEventB,
+                                              Long userId,
+                                              Set<Long> result) {
+        for (EventSimilarity es : similarities) {
+            Long candidateId = isEventB ? es.getEventB() : es.getEventA();
+            if (!userActionRepository.existsByEventIdAndUserId(candidateId, userId)) {
+                result.add(candidateId);
+            }
+        }
+    }
+
+    private List<RecommendedEventProto> generateRecommendations(Set<Long> candidateEventIds,
+                                                                Long userId,
+                                                                int limit) {
+        // Рассчитываем score для каждого кандидата
+        Map<Long, Double> eventScores = candidateEventIds.stream()
+                .collect(Collectors.toMap(eventId -> eventId,
+                        eventId -> calculateRecommendationScore(eventId, userId, limit)));
+
+        return eventScores.entrySet().stream()
+                .sorted(Map.Entry.<Long, Double>comparingByValue().reversed())
+                .limit(limit)
+                .map(entry -> buildRecommendation(entry.getKey(), entry.getValue()))
+                .toList();
+    }
+
+    private Double calculateRecommendationScore(Long eventId, Long userId, int limit) {
+        PageRequest pageRequest = PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "score"));
+        List<EventSimilarity> similaritiesA = eventSimilarityRepository.findAllByEventA(eventId, pageRequest);
+        List<EventSimilarity> similaritiesB = eventSimilarityRepository.findAllByEventB(eventId, pageRequest);
+
+        Map<Long, Double> similarityScores = new HashMap<>();
+        collectViewedSimilarities(similaritiesA, true, userId, similarityScores);
+        collectViewedSimilarities(similaritiesB, false, userId, similarityScores);
+
+        Map<Long, Double> userRatings = userActionRepository.findAllByEventIdInAndUserId(
+                        similarityScores.keySet(), userId).stream()
+                .collect(Collectors.toMap(UserAction::getEventId,
+                        userAction -> toWeight(userAction.getActionType())));
+
+        double sumWeightedRatings = 0.0;
+        double sumSimilarityScores = 0.0;
+
+        for (Map.Entry<Long, Double> entry : similarityScores.entrySet()) {
+            Long viewedEventId = entry.getKey();
+            Double userRating = userRatings.get(viewedEventId);
+            if (userRating != null) {
+                sumWeightedRatings += userRating * entry.getValue();
+                sumSimilarityScores += entry.getValue();
+            }
         }
 
-        Map<Long, Float> actions = userActionRepository.findAllByEventIdInAndUserId(scores.keySet(), userId).stream()
-                .collect(Collectors.toMap(UserAction::getEventId, UserAction::getMark));
+        return sumSimilarityScores > 0 ? sumWeightedRatings / sumSimilarityScores : 0.0;
+    }
 
-        double weight = scores.entrySet().stream()
-                .mapToDouble(e -> actions.getOrDefault(e.getKey(), 0.0f) * e.getValue())
-                .sum();
+    private void collectViewedSimilarities(List<EventSimilarity> similarities,
+                                           boolean isEventB,
+                                           Long userId,
+                                           Map<Long, Double> result) {
+        for (EventSimilarity es : similarities) {
+            Long relatedEventId = isEventB ? es.getEventB() : es.getEventA();
+            if (userActionRepository.existsByEventIdAndUserId(relatedEventId, userId)) {
+                result.put(relatedEventId, es.getScore());
+            }
+        }
+    }
 
-        double sum = scores.values().stream()
-                .mapToDouble(Double::doubleValue)
-                .sum();
+    private RecommendedEventProto buildRecommendation(Long eventId, Double score) {
+        return RecommendedEventProto.newBuilder()
+                .setEventId(eventId)
+                .setScore(score)
+                .build();
+    }
 
-        return sum > 0 ? (float) (weight / sum) : 0f;
+    private void addFilteredRecommendations(List<RecommendedEventProto> recommendations,
+                                            List<EventSimilarity> similarities,
+                                            boolean isEventB,
+                                            Long userId) {
+        for (EventSimilarity es : similarities) {
+            Long candidateEventId = isEventB ? es.getEventB() : es.getEventA();
+
+            if (!userActionRepository.existsByEventIdAndUserId(candidateEventId, userId)) {
+                recommendations.add(RecommendedEventProto.newBuilder()
+                        .setEventId(candidateEventId)
+                        .setScore(es.getScore())
+                        .build());
+            }
+        }
+    }
+
+    private Double toWeight(ActionType actionType) {
+        return switch (actionType) {
+            case VIEW -> view;
+            case REGISTER -> register;
+            case LIKE -> like;
+        };
     }
 
 }
